# QPramp

./: CMakeLists.txt  Makefile  algs.c  algs.h  config.Makefile  csv.c  csv.h  iterable_set.c  iterable_set.h  lti.c  lti.h  main.c  matrix.c  matrix.h  osqp_init.c  osqp_init.h  parse.c  parse.h  qp_ramp.c  qp_ramp.h  save.c  timing.c  timing.h  vector.c  vector.h
data/model1/: a.csv  b.csv  f.csv  g.csv  invh.csv  s.csv  w.csv  x0.csv
data/model2/: a.csv  b.csv  f.csv  g.csv  invh.csv  s.csv  x0.csv
data/model3/: a.csv  b.csv  f.csv  g.csv  invh.csv  s.csv  w.csv  x0.csv
data/model4/: a.csv  b.csv  f.csv  invh.csv  s.csv  w.csv  x0.csv
data/model5/: a.csv  b.csv  f.csv  invh.csv  w.csv  x0.csv
data/model6/: a.csv  b.csv  f.csv  invh.csv  w.csv  x0.csv
include/: csv.h  indexed_vectors.h  iterable_set.h  lti.h  matrix.h  parallelism.h  qp_ramp.h  qpramp.h  thread_pool.h  timing.h  vector.h
mex/: make_mex.m  mextest.m  mextest_mpc.m  qp_ramp_solve.c  qp_ramp_solve_mpc.c  qp_ramp_solve_mpc_test.m  qp_ramp_solve_test.m  qpramp_solve.c  qpramp_solve_mpc.c  qpramp_solve_mpc_test.m  qpramp_solve_test.m
src/: CMakeLists.txt  Makefile  csv.c  indexed_vectors.c  iterable_set.c  lti.c  main.c  matrix.c  parallelism.c  qp_ramp.c  qpramp.c  thread_pool.c  timing.c  vector.c
